# server/routes/api.route.ts
@@ -1,6 +1,6 @@
 import { Maintenance, PrismaClient, User } from '@prisma/client'
 import express from 'express'
-import { createUserApi, deleteUserByIdApi, getAllUserApi, getUserByIdApi, updateUserByIdApi } from '../controllers/api/api.user.controller'
+import { createUserApi, deleteUserByIdApi, getAllUserApi, getUserByIdApi, loginApi, updateUserByIdApi } from '../controllers/api/api.user.controller'
 
 const prisma = new PrismaClient()
 const router = express.Router()
@@ -30,6 +30,10 @@ router.patch('/users/:id', async (req: express.Request, res: express.Response, n
 
 router.post('/user', async (req: express.Request, res: express.Response, next: any) => {
   createUserApi(req, res, next)
+})
+
+router.post('/login', async (req: express.Request, res: express.Response, next: any) => {
+  loginApi(req, res, next)
 })
 
 // ____ ROUTES
